--- a/styles/header.css
+++ b/styles/header.css
@@ -1,5 +1,5 @@
 /* Header */
-.hero {
+.header {
   background: url("../images/home/brown-paper-clips-1097930.jpg") no-repeat
     center center/cover;
   height: 100vh;
@@ -7,27 +7,28 @@
   color: var(--main-text-color);
 }
 
-.hero .content {
+.header .content {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
   height: 100%;
-  padding: 0 20px;
+  padding: 0 5em;
 }
 
-.hero .content h1 {
-  font-size: 55px;
+.header .content h1 {
+  font-size: 33px;
 }
 
-.hero .content p {
+.header .content p {
   font-size: 23px;
-  max-width: 600px;
+  max-width: 800px;
+  width: 100%;
   margin: 20px 0 30px;
 }
 
-.hero::before {
+.header::before {
   content: "";
   position: absolute;
   top: 0;
@@ -37,7 +38,7 @@
   background: #ffffff91;
 }
 
-.hero * {
+.header * {
   z-index: 1;
 }
 
@@ -69,6 +70,29 @@
 
 .white-txt {
   color: #fff;
+}
+
+.heading-p {
+  letter-spacing: 0.1em;
+}
+
+.heart {
+  color: var(--navbar-header-bg);
+  animation: heart 1s infinite;
+}
+
+@keyframes heart {
+  0% {
+    transform: scale(0.75);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0.75);
+  }
 }
 
 .navbar a:hover {
