--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -7,6 +7,7 @@
   --secondary-section-bg: #d8b2e1;
   --navbar-header-bg: #f3a6ad;
   --main-text-color: #333333;
+  --box-shadows-reg-img: rgba(0, 0, 0, 0.5);
   --section-width: 100vw;
   --section-height: 100vh;
 }
@@ -81,8 +82,8 @@ p {
   height: 100%;
   max-width: 200px;
   border-radius: 50%;
-  border: 5px solid whitesmoke;
-  box-shadow: 2px 2px 10px 2px var(--box-shadows-reg-img);
+  border: 5px solid var(--primary-section-bg);
+  box-shadow: 2px 2px 15px 2px var(--primary-section-bg);
   transition: filter 0.4s ease-in-out;
 }
 
