--- a/styles/header.css
+++ b/styles/header.css
@@ -18,7 +18,7 @@
 }
 
 .header .content h1 {
-  font-size: 33px;
+  font-size: 2rem;
 }
 
 .header .content p {
@@ -61,8 +61,8 @@
 
 .navbar a {
   color: var(--main-text-color);
-  padding: 10px 20px;
-  margin: 0 5px;
+  padding: 0.5rem 1rem;
+  margin: 0 0.1em;
 }
 .navbar.top {
   background: transparent;
@@ -123,4 +123,105 @@
   height: 100vh;
   position: relative;
   color: #fff;
+}
+
+/* mobile navbar */
+
+#menu a {
+  text-decoration: none;
+  color: var(--navbar-header-bg);
+  opacity: 1;
+  font-size: 4.5vw;
+  font-weight: 400;
+  transition: 200ms;
+}
+#nav-mobile {
+  background-color: var(--navbar-header-bg);
+  height: 65px;
+}
+
+#menuToggle {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  top: 25px;
+  left: 25px;
+  z-index: 2;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle input {
+  display: flex;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 3;
+}
+
+#menuToggle span {
+  display: flex;
+  width: 29px;
+  height: 2px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #cbb3b3;
+  border-radius: 3px;
+  z-index: 2;
+  transform-origin: 5px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+#menuToggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-3px, -1px);
+  background: #36383f;
+}
+#menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+#menu {
+  position: absolute;
+  width: 50vw;
+  height: 40vh;
+  box-shadow: 0 0 10px #85888c;
+  margin: -2rem;
+  padding: 2rem;
+  list-style-type: none;
+  padding-top: 80px;
+  background-color: #f5f6fa;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+
+#menu li {
+  padding: 10px 0;
+  transition-delay: 2s;
+}
+
+#menuToggle input:checked ~ ul {
+  transform: none;
+}
+
+.hidden-style {
+  display: none;
 }
