--- a/styles/header.css
+++ b/styles/header.css
@@ -22,13 +22,13 @@
 }
 
 .header .content p {
-  font-size: 23px;
+  font-size: 1.5rem;
   max-width: 800px;
   width: 100%;
-  margin: 20px 0 30px;
+  margin: 1rem 0 1.5rem;
 }
 
-.header::before {
+.header::after {
   content: "";
   position: absolute;
   top: 0;
@@ -40,40 +40,6 @@
 
 .header * {
   z-index: 1;
-}
-
-/* Navbar */
-.navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: var(--navbar-header-bg);
-  color: var(--main-text-color);
-  opacity: 0.97;
-  width: 100%;
-  height: 70px;
-  position: fixed;
-  top: 0px;
-  padding: 0 30px;
-  transition: 0.5s;
-  z-index: 2;
-}
-
-.navbar a {
-  color: var(--main-text-color);
-  padding: 0.5rem 1rem;
-  margin: 0 0.1em;
-}
-.navbar.top {
-  background: transparent;
-}
-
-.white-txt {
-  color: #fff;
-}
-
-.heading-p {
-  letter-spacing: 0.1em;
 }
 
 .heart {
@@ -95,34 +61,56 @@
   }
 }
 
+/* Navbar */
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: var(--navbar-header-bg);
+  color: var(--main-text-color);
+  opacity: 0.97;
+  width: 100%;
+  height: 12vh;
+  position: fixed;
+  top: 0;
+  padding: 0 2rem;
+  transition: all 0.5s;
+  z-index: 2;
+}
+
+.navbar a {
+  color: var(--main-text-color);
+  padding: 0.5rem 1rem;
+  margin: 0 0.1em;
+}
+.navbar.top {
+  background: transparent;
+}
+
+.heading-p {
+  letter-spacing: 0.1em;
+}
+
 .navbar a:hover {
   border-bottom: var(--main-text-color) 2px solid;
+}
+
+.navbar a.btn:hover {
+  transition: all 700ms;
+  background-color: var(--primary-bg-btn-hover);
+  border: none;
+  color: white;
 }
 
 .navbar ul {
   display: flex;
 }
 
-/* Button */
-.btn {
-  cursor: pointer;
-  padding: 10px 30px;
-  color: var(--main-text-color);
-  background-color: var(--primary-bg-btn);
-  border: none;
-  border-radius: 5px;
+.current {
+  border-bottom: var(--primary-bg-btn-hover) 2px solid;
 }
-
-/* .btn:hover {
-  opacity: 0.9;
-} */
-/* section 2 */
-
-.section2-container {
-  background: #fff;
-  height: 100vh;
-  position: relative;
-  color: #fff;
+.logo {
+  cursor: pointer;
 }
 
 /* mobile navbar */
@@ -136,18 +124,17 @@
   transition: 200ms;
 }
 #nav-mobile {
-  background-color: var(--navbar-header-bg);
-  height: 65px;
+  height: 7vh;
 }
 
 #menuToggle {
   display: flex;
   flex-direction: column;
-  position: relative;
-  top: 25px;
-  left: 25px;
+  position: fixed;
+  width: 100%;
+  background-color: var(--navbar-header-bg);
+  padding: 22px;
   z-index: 2;
-  -webkit-user-select: none;
   user-select: none;
 }
 
@@ -167,7 +154,7 @@
   height: 2px;
   margin-bottom: 5px;
   position: relative;
-  background: #cbb3b3;
+  background: #ffffff;
   border-radius: 3px;
   z-index: 2;
   transform-origin: 5px 0px;
@@ -207,7 +194,6 @@
   list-style-type: none;
   padding-top: 80px;
   background-color: #f5f6fa;
-  -webkit-font-smoothing: antialiased;
   transform-origin: 0% 0%;
   transform: translate(-100%, 0);
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
@@ -224,4 +210,12 @@
 
 .hidden-style {
   display: none;
+}
+
+/* #nav-mobile {
+  position: fixed;
+} */
+
+.white-txt {
+  color: #fff;
 }
