--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -5,7 +5,8 @@
   --secondary-bg-btn-hover: #92d898;
   --primary-section-bg: #efced9;
   --secondary-section-bg: #d8b2e1;
-  --navbar-header-bg: #f3a6ad;
+  --navbar-header-bg: #efced9;
+  --section-bg: #def0eb;
   --main-text-color: #333333;
   --box-shadows-reg-img: rgba(0, 0, 0, 0.5);
   --section-width: 100vw;
@@ -15,9 +16,21 @@
 /* fonts */
 @font-face {
   font-family: "SuezOne-Regular";
-  src: url("../fonts/SuezOne-Regular.eot");
-  src: url("../fonts/SuezOne-Regular.ttf") format("truetype"),
-    url("../fonts/SuezOne-Regular.eot") format("embedded-opentype");
+  src: url("../fonts/SuezOne-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "YanoneKaffeesatz";
+  src: url("../fonts/YanoneKaffeesatz-VariableFont_wght.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Righteous-Regular";
+  src: url("../fonts/YanoneKaffeesatz-VariableFont_wght.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -28,6 +41,10 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 body {
@@ -42,6 +59,7 @@ ul {
 
 img {
   width: 100%;
+  height: 100%;
 }
 
 a {
@@ -60,7 +78,8 @@ h1 {
 }
 
 p {
-  margin: 10px 0;
+  font-family: "trashimclm-bold", "SuezOne-Regular", sans-serif;
+  margin: 0.5rem;
 }
 
 .text-primary {
@@ -87,10 +106,21 @@ p {
   max-width: 200px;
   border-radius: 50%;
   border: 5px solid var(--primary-section-bg);
-  box-shadow: 2px 2px 15px 2px var(--primary-section-bg);
-  transition: filter 0.4s ease-in-out;
 }
 
-.imgWrapper:hover img {
-  filter: grayscale();
+.img-container {
+  height: 100%;
+  width: 100%;
+  padding: 0.5rem;
+}
+
+/* Button */
+.btn {
+  cursor: pointer;
+  padding: 0.5rem 2rem;
+  color: var(--main-text-color);
+  background-color: var(--primary-bg-btn);
+  border: none;
+  color: white;
+  border-radius: 5px;
 }
