--- a/styles/header.css
+++ b/styles/header.css
@@ -17,12 +17,13 @@
   padding: 0 5em;
 }
 
-.header .content h1 {
+/* .header .content h1 {
   font-size: 2rem;
-}
+} */
 
 .header .content p {
-  font-size: 1.5rem;
+  /* font-size: 1.5em; */
+  font-family: "SuezOne-Regular", sans-serif;
   max-width: 800px;
   width: 100%;
   margin: 1rem 0 1.5rem;
@@ -82,6 +83,7 @@
   color: var(--main-text-color);
   padding: 0.5rem 1rem;
   margin: 0 0.1em;
+  font-family: "SuezOne-Regular";
 }
 .navbar.top {
   background: transparent;
