--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,49 +1,73 @@
 .parent {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
 }
 
 .div1 {
-  grid-area: 1 / 1 / 2 / 5;
   background: var(--section-bg);
-  height: 80vh;
   width: 100%;
+  padding-bottom: 50px;
+  height: auto;
 }
 
 .inner-section1 {
   width: 80%;
-  margin: 3rem auto;
-  height: 80%;
+  height: auto;
   background-color: white;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
 
 .div2 {
-  grid-area: 2 / 1 / 3 / 5;
   background-color: white;
-  height: 80vh;
+  padding-bottom: 100px;
 }
 
 /* section 2 */
 
-.section2-container {
-  height: 100vh;
-  position: relative;
-  color: var(--main-color);
-}
-
 .inner-section2 {
   width: 80%;
-  margin: 3rem auto;
-  height: 80%;
+  height: auto;
+  position: relative;
+  margin-top: 3rem;
   background: var(--section-bg);
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
+
 .section2-container h2 {
   padding: 1rem 0;
   text-align: center;
   background: var(--section-bg);
+}
+
+.inner-section1,
+.inner-section2 {
+  position: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.heading-p {
+  font-size: 22px;
+}
+
+/* section 3 */
+
+.section3-container {
+  background-color: var(--secondary-section-bg);
+  height: 80vh;
+}
+
+.inner-section3 {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+  background-color: white;
+  padding: 3rem;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  transition: height 700ms ease-in linear;
+}
+.inner-section1 div:last-child,
+.inner-section2 div:first-child {
+  width: 90%;
+  padding: 0 20px;
+  top: 0;
 }
