--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -1,14 +1,18 @@
 :root {
   --primary-bg-btn: #98b8f1;
   --primary-bg-btn-hover: #989af1;
-  --secondary-bg-btn: #92d8c5;
-  --secondary-bg-btn-hover: #92d898;
-  --primary-section-bg: #efced9;
-  --secondary-section-bg: #d8b2e1;
+  /* --green-bg-btn: #92d8c5;
+  --green-bg-btn-hover: #92d898; */
+  --secondary-btn-bg: #f0a8c0;
+  --secondary-btn-bg-hover: #f388bd;
+  --secondary-section-bg: #e0cfe4;
   --navbar-header-bg: #efced9;
   --section-bg: #def0eb;
   --main-text-color: #333333;
+  --icons-color: white;
   --box-shadows-reg-img: rgba(0, 0, 0, 0.5);
+  --social-icons-box-shadow: rgba(0, 0, 0, 0.1);
+  --tool-tip-bg-color: #ffffff;
   --section-width: 100vw;
   --section-height: 100vh;
 }
@@ -51,6 +55,7 @@ body {
   font-family: "SuezOne-Regular", sans-serif;
   color: var(--main-text-color);
   line-height: 1.6;
+  overflow-x: hidden;
 }
 
 ul {
@@ -78,8 +83,7 @@ h1 {
 }
 
 p {
-  font-family: "trashimclm-bold", "SuezOne-Regular", sans-serif;
-  margin: 0.5rem;
+  font-family: "YanoneKaffeesatz", "SuezOne-Regular", sans-serif;
 }
 
 .text-primary {
@@ -90,7 +94,7 @@ p {
 
 .flex-container {
   display: flex;
-  align-items: center;
+  padding: 1em;
 }
 
 .flex-item {
@@ -109,9 +113,7 @@ p {
 }
 
 .img-container {
-  height: 100%;
   width: 100%;
-  padding: 0.5rem;
 }
 
 /* Button */
@@ -119,8 +121,29 @@ p {
   cursor: pointer;
   padding: 0.5rem 2rem;
   color: var(--main-text-color);
+  font-family: "YanoneKaffeesatz", "SuezOne-Regular", sans-serif;
+  font-size: 1rem;
   background-color: var(--primary-bg-btn);
   border: none;
   color: white;
   border-radius: 5px;
+}
+
+.secondary-btn {
+  margin: 0.7rem 0;
+  background-color: var(--secondary-btn-bg);
+  transition: background-color 700ms ease-in-out;
+}
+
+.secondary-btn:hover {
+  background-color: var(--secondary-btn-bg-hover);
+}
+
+.primary-btn {
+  margin: 0.7rem 0;
+}
+
+.primary-btn:hover {
+  transition: all 700ms;
+  background-color: var(--primary-bg-btn-hover);
 }
