--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -10,12 +10,16 @@
   display: inline-block;
 }
 
-h1 {
-  font-size: 20px;
+p {
+  font-size: clamp(14px, 3.5vw, 16px);
 }
 
-p {
-  font-size: 16px;
+h1 {
+  font-size: clamp(18px, 3.5vw, 22px);
+}
+
+h3 {
+  font-size: clamp(16px, 3.5vw, 20px);
 }
 
 .inner-section1,
@@ -38,3 +42,5 @@ p {
 .inner-section2 div:first-child {
   width: 100%;
 }
+
+/* form */
