--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -1,8 +1,8 @@
 :root {
   --primary-bg-btn: #98b8f1;
   --primary-bg-btn-hover: #989af1;
-  /* --green-bg-btn: #92d8c5;
-  --green-bg-btn-hover: #92d898; */
+  --green-bg-btn: #92d8c5;
+  --green-bg-btn-hover: #92d898;
   --secondary-btn-bg: #f0a8c0;
   --secondary-btn-bg-hover: #f388bd;
   --secondary-section-bg: #e0cfe4;
@@ -65,6 +65,7 @@ ul {
 img {
   width: 100%;
   height: 100%;
+  border-radius: 10px;
 }
 
 a {
