--- a/styles/form.css
+++ b/styles/form.css
@@ -1,4 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Merriweather);
 *,
 *:before,
 *:after {
@@ -7,11 +6,30 @@
   box-sizing: border-box;
 }
 
+/* section 3 */
+
+.section3-container {
+  background-color: var(--secondary-section-bg);
+  padding-bottom: 35px;
+}
+
+.inner-section3 {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+  background-color: white;
+  padding: 3rem;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
+
+/* form styling */
+
 form {
   max-width: 600px;
   text-align: center;
   margin: 20px auto;
 }
+
 form input,
 form textarea {
   border: 0;
@@ -29,24 +47,29 @@ form textarea {
   box-shadow: 0 1px 1px var(--social-icons-box-shadow);
   resize: none;
 }
+
 form input:focus,
 form textarea:focus {
-  -moz-box-shadow: 0 0px 2px #e74c3c !important;
-  -webkit-box-shadow: 0 0px 2px #e74c3c !important;
-  box-shadow: 0 0px 2px #e74c3c !important;
+  -moz-box-shadow: 0 0px 2px var(--form-inputs-hover);
+  -webkit-box-shadow: 0 0px 2px var(--form-inputs-hover);
+  border: 1px solid var(--form-inputs-hover);
+  box-shadow: 0 0px 2px var(--form-inputs-hover);
 }
+
 form #input-submit {
   color: white;
-  background: #e74c3c;
+  background: var(--green-bg-btn);
   cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 700ms ease-in-out;
 }
+
 form #input-submit:hover {
-  -moz-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
-  -webkit-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
-  box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
+  background: var(--green-bg-btn-hover);
 }
+
 form textarea {
-  height: 126px;
+  height: 146px;
 }
 
 .half {
@@ -70,6 +93,7 @@ form textarea {
     margin-bottom: 0;
   }
 }
+
 /* Clearfix */
 .cf:before,
 .cf:after {
@@ -81,4 +105,8 @@ form textarea {
 
 .cf:after {
   clear: both;
+}
+
+.green-txt {
+  color: var(--green-txt);
 }
