text inside projects

--- a/styles/form.css
+++ b/styles/form.css
@@ -95,17 +95,14 @@ form textarea {
 }
 
 /* Clearfix */
-.cf:before,
+/* .cf:before,
 .cf:after {
-  content: " ";
-  /* 1 */
   display: table;
-  /* 2 */
 }
 
 .cf:after {
   clear: both;
-}
+} */
 
 /* form labels */
 
